--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.0",
+    "hubot-shubot": "^1.0.0",
     "hubot-slack": "^4.3.4"
   },
   "engines": {
